[package]
name = "imkitchen-user"
version = "0.12.8"
edition.workspace = true
authors.workspace = true

[dependencies]
evento.workspace = true
bitcode.workspace = true
anyhow.workspace = true
tracing.workspace = true
validator = { workspace = true }
regex = { workspace = true }
argon2.workspace = true
sqlx = { workspace = true }
strum.workspace = true
time = { workspace = true }
ulid = { workspace = true }
sea-query.workspace = true
sea-query-sqlx.workspace = true
cfg-if.workspace = true
serde.workspace = true
imkitchen-shared = { path = "../shared", version = "0.12.8" }
imkitchen-db = { path = "../db", version = "0.12.8" }

[dev-dependencies]
tokio.workspace = true
temp-dir.workspace = true
futures.workspace = true

