[package]
name = "imkitchen-user"
version = "0.13.0"
edition.workspace = true
authors.workspace = true

[package.metadata.cargo-machete]
ignored = ["bitcode"]

[dependencies]
evento.workspace = true
anyhow.workspace = true
bitcode.workspace = true
validator = { workspace = true }
regex = { workspace = true }
argon2.workspace = true
sqlx = { workspace = true }
strum.workspace = true
time = { workspace = true }
ulid = { workspace = true }
sea-query.workspace = true
sea-query-sqlx.workspace = true
serde.workspace = true
imkitchen-shared = { path = "../shared", version = "0.13.0" }
imkitchen-db = { path = "../db", version = "0.13.0" }

[dev-dependencies]
tokio.workspace = true
temp-dir.workspace = true
futures.workspace = true
