[package]
name = "imkitchen-user"
version = "0.15.1"
edition.workspace = true
authors.workspace = true

[package.metadata.cargo-machete]
ignored = ["bitcode"]

[dependencies]
evento.workspace = true
anyhow.workspace = true
bitcode.workspace = true
validator = { workspace = true }
regex = { workspace = true }
argon2.workspace = true
sqlx = { workspace = true }
strum.workspace = true
time = { workspace = true }
ulid = { workspace = true }
sea-query.workspace = true
sea-query-sqlx.workspace = true
async-stripe.workspace = true
async-stripe-core.workspace = true
async-stripe-shared.workspace = true
async-stripe-types.workspace = true
serde.workspace = true
tracing.workspace = true
tokio-cron-scheduler.workspace = true
imkitchen-shared = { path = "../shared", version = "0.15.1" }
imkitchen-db = { path = "../db", version = "0.15.1" }

[dev-dependencies]
tokio.workspace = true
temp-dir.workspace = true
