[package]
name = "imkitchen-web-admin"
version = "1.1.1"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
askama = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
strum = { workspace = true }
evento = { workspace = true }
imkitchen-billing = { path = "../../crates/billing", version = "1.1.1" }
imkitchen-core = { path = "../../crates/core", version = "1.1.1" }
imkitchen-types = { path = "../../crates/types", version = "1.1.1" }
imkitchen-identity = { path = "../../crates/identity", version = "1.1.1" }
imkitchen-web-shared = { path = "../shared", version = "1.1.1" }
