[package]
name = "imkitchen-web-admin"
version = "1.1.4"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
askama = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
strum = { workspace = true }
evento = { workspace = true }
tokio = { workspace = true }
zip = { workspace = true }
ulid = { workspace = true }
imkitchen-billing = { path = "../../crates/billing", version = "1.1.4" }
imkitchen-core = { path = "../../crates/core", version = "1.1.4" }
imkitchen-types = { path = "../../crates/types", version = "1.1.4" }
imkitchen-identity = { path = "../../crates/identity", version = "1.1.4" }
imkitchen-web-shared = { path = "../shared", version = "1.1.4" }

[dev-dependencies]
tokio = { workspace = true }
temp-dir = { workspace = true }
sqlx = { workspace = true }
image = { workspace = true }
imkitchen-db = { path = "../../crates/db", version = "1.1.4" }
