[package]
name = "imkitchen-web-demo"
version = "1.6.2"
edition.workspace = true

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
askama = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
evento = { workspace = true }
imkitchen-core = { path = "../../crates/core", version = "1.6.2" }
imkitchen-types = { path = "../../crates/types", version = "1.6.2" }
imkitchen-web-shared = { path = "../shared", version = "1.6.2" }
imkitchen-web-kitchen = { path = "../kitchen", version = "1.6.2" }
imkitchen-web-menu = { path = "../menu", version = "1.6.2" }
imkitchen-web-recipe = { path = "../recipe", version = "1.6.2" }
imkitchen-web-grocery = { path = "../grocery", version = "1.6.2" }
