[package]
name = "imkitchen-web-grocery"
version = "0.18.1"
edition.workspace = true

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
askama = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
imkitchen-core = { path = "../../crates/core", version = "0.18.1" }
imkitchen-types = { path = "../../crates/types", version = "0.18.1" }
imkitchen-web-shared = { path = "../shared", version = "0.18.1" }
