[package]
name = "imkitchen-web-grocery"
version = "1.0.9"
edition.workspace = true

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
askama = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
imkitchen-core = { path = "../../crates/core", version = "1.0.9" }
imkitchen-types = { path = "../../crates/types", version = "1.0.9" }
imkitchen-web-shared = { path = "../shared", version = "1.0.9" }
