[package]
name = "imkitchen-web-kitchen"
version = "1.0.8"
edition.workspace = true

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
askama = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
imkitchen-core = { path = "../../crates/core", version = "1.0.8" }
imkitchen-types = { path = "../../crates/types", version = "1.0.8" }
imkitchen-web-shared = { path = "../shared", version = "1.0.8" }
