[package]
name = "imkitchen-web-menu"
version = "1.0.7"
edition.workspace = true

[dependencies]
axum = { workspace = true }
askama = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
imkitchen-core = { path = "../../crates/core", version = "1.0.7" }
imkitchen-web-shared = { path = "../shared", version = "1.0.7" }
