[package]
name = "imkitchen-web-public"
version = "1.0.3"
edition.workspace = true

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
askama = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
strum = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
world-tax = { workspace = true }
async-stripe-core = { workspace = true }
async-stripe-types = { workspace = true }
imkitchen-core = { path = "../../crates/core", version = "1.0.3" }
imkitchen-types = { path = "../../crates/types", version = "1.0.3" }
imkitchen-identity = { path = "../../crates/identity", version = "1.0.3" }
imkitchen-billing = { path = "../../crates/billing", version = "1.0.3" }
imkitchen-web-shared = { path = "../shared", version = "1.0.3" }
