[package]
name = "imkitchen-web-recipe"
version = "1.0.10"
edition.workspace = true

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
askama = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
strum = { workspace = true }
evento = { workspace = true }
imkitchen-core = { path = "../../crates/core", version = "1.0.10" }
imkitchen-types = { path = "../../crates/types", version = "1.0.10" }
imkitchen-web-shared = { path = "../shared", version = "1.0.10" }
