[package]
name = "imkitchen-web-settings"
version = "1.0.12"
edition.workspace = true

# imkitchen-core is consumed only through `try_response!` macro expansion from
# imkitchen-web-shared, which cargo-machete can't see — keep it ignored.
[package.metadata.cargo-machete]
ignored = ["imkitchen-core"]

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
askama = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
strum = { workspace = true }
evento = { workspace = true }
async-stripe-core = { workspace = true }
async-stripe-payment = { workspace = true }
async-stripe-shared = { workspace = true }
imkitchen-core = { path = "../../crates/core", version = "1.0.12" }
imkitchen-types = { path = "../../crates/types", version = "1.0.12" }
imkitchen-identity = { path = "../../crates/identity", version = "1.0.12" }
imkitchen-billing = { path = "../../crates/billing", version = "1.0.12" }
imkitchen-web-shared = { path = "../shared", version = "1.0.12" }
