[package]
name = "imkitchen-web-settings"
version = "1.1.2"
edition.workspace = true

[package.metadata.cargo-machete]
ignored = ["imkitchen-core"]

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
askama = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
strum = { workspace = true }
evento = { workspace = true }
async-stripe-core = { workspace = true }
async-stripe-payment = { workspace = true }
async-stripe-shared = { workspace = true }
imkitchen-core = { path = "../../crates/core", version = "1.1.2" }
imkitchen-types = { path = "../../crates/types", version = "1.1.2" }
imkitchen-identity = { path = "../../crates/identity", version = "1.1.2" }
imkitchen-billing = { path = "../../crates/billing", version = "1.1.2" }
imkitchen-web-shared = { path = "../shared", version = "1.1.2" }
