[package]
name = "imkitchen-web-shared"
version = "1.7.0"
edition.workspace = true

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
askama = { workspace = true }
rust-i18n = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
jsonwebtoken = { workspace = true }
time = { workspace = true }
tower = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
minify-html = { workspace = true }
oxc = { workspace = true }
lightningcss = { workspace = true }
imkitchen-core = { path = "../../crates/core", version = "1.7.0" }
imkitchen-identity = { path = "../../crates/identity", version = "1.7.0" }
imkitchen-billing = { path = "../../crates/billing", version = "1.7.0" }
imkitchen-notification = { path = "../../crates/notification", version = "1.7.0" }
evento = { workspace = true }
config = { workspace = true }
async-stripe = { workspace = true }
